fully functional, code refactored

--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 div {
 	position: relative;
+	display: inline-block;
 }
 
 textarea {
@@ -11,7 +12,6 @@ textarea {
 }
 
 img {
-	display: block;
 	height: 400px;
 	width: 400px;
 	margin: 5% auto;
